Fix output bags and add synchronization